Clamp-Helfer durch Math.clamp ersetzen